examples/test/testpolicy9495.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy9495
  namespace: namespace398
spec:
  podSelector:
    matchLabels:
      key37: value25
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key12: value43
          key28: value6
      podSelector:
        matchLabels:
          key30: value8
          key17: value28
          key47: value34
